ENH: qMRMLSliceControllerWidget - Added method setControllerButtonGroup
All controller of a same group will be hidden/shown if at least on of
the sliceCollapsiblebutton is clicked

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14226 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
@@ -40,10 +40,13 @@
      <property name="text">
       <string/>
      </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true">
+    <widget class="QWidget" name="ControllerWidgetGroup" native="true">
      <layout class="QGridLayout" name="gridLayout">
       <property name="margin">
        <number>0</number>
