STYLE: qMRMLSliceControllerWidget - Rename OrientationSelector into SliceOrientationSelector
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14232 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
@@ -66,7 +66,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QComboBox" name="OrientationSelector">
+       <widget class="QComboBox" name="SliceOrientationSelector">
         <property name="toolTip">
          <string>Select orientation</string>
         </property>
