--- a/Base/QTCoreModules/Resources/UI/qSlicerSliceControllerModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerSliceControllerModule.ui
@@ -91,289 +91,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QWidget" name="widget" native="true">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <layout class="QFormLayout" name="formLayout">
-         <property name="margin">
-          <number>0</number>
-         </property>
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Layout Name</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="LayoutNameLineEdit">
-           <property name="readOnly">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Orientation</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <layout class="QHBoxLayout" name="horizontalLayout">
-           <item>
-            <widget class="QComboBox" name="SliceOrientationSelector">
-             <property name="toolTip">
-              <string>Select orientation</string>
-             </property>
-             <item>
-              <property name="text">
-               <string>Axial</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Sagittal</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Coronal</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Reformat</string>
-              </property>
-             </item>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_4">
-           <property name="text">
-            <string>Slice visible</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QToolButton" name="SliceVisibilityToggle">
-           <property name="text">
-            <string>...</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../../../../Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc">
-             <normaloff>:/Icons/VisibleOff.png</normaloff>
-             <normalon>:/Icons/VisibleOn.png</normalon>:/Icons/VisibleOff.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>20</width>
-             <height>20</height>
-            </size>
-           </property>
-           <property name="checkable">
-            <bool>true</bool>
-           </property>
-           <property name="checked">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_5">
-           <property name="text">
-            <string>Widget visible</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="1">
-          <widget class="QToolButton" name="WidgetVisibilityToggle">
-           <property name="text">
-            <string>...</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../../../../Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc">
-             <normaloff>:/Icons/VisibleOff.png</normaloff>
-             <normalon>:/Icons/VisibleOn.png</normalon>:/Icons/VisibleOff.png</iconset>
-           </property>
-           <property name="iconSize">
-            <size>
-             <width>20</width>
-             <height>20</height>
-            </size>
-           </property>
-           <property name="checkable">
-            <bool>true</bool>
-           </property>
-           <property name="checked">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
-          <widget class="QLabel" name="label_6">
-           <property name="text">
-            <string>Dimension</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="1">
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QLineEdit" name="DimensionXEdit">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="DimensionYEdit">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="DimensionZEdit">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="5" column="0">
-          <widget class="QLabel" name="label_7">
-           <property name="text">
-            <string>Field of view</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="1">
-          <layout class="QHBoxLayout" name="horizontalLayout_3">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QLineEdit" name="FieldOfViewXEdit">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="FieldOfViewYEdit">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLineEdit" name="FieldOfViewZEdit">
-             <property name="readOnly">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="6" column="0">
-          <widget class="QLabel" name="label_8">
-           <property name="text">
-            <string>Lightbox layout</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="1">
-          <layout class="QHBoxLayout" name="horizontalLayout_5">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QSpinBox" name="LightboxLayoutXSpinBox">
-             <property name="minimum">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <number>6</number>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="LightboxLayoutYSpinBox">
-             <property name="minimum">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <number>6</number>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="7" column="0">
-          <widget class="QLabel" name="label_9">
-           <property name="text">
-            <string>Slice spacing mode</string>
-           </property>
-          </widget>
-         </item>
-         <item row="7" column="1">
-          <layout class="QHBoxLayout" name="horizontalLayout_4">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QRadioButton" name="AutomaticSliceSpacingRadioButton">
-             <property name="text">
-              <string>Automatic</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QRadioButton" name="PrescribedSliceSpacingRadioButton">
-             <property name="text">
-              <string>Prescribed</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item row="8" column="0">
-          <widget class="QLabel" name="label_10">
-           <property name="text">
-            <string>Prescribed spacing</string>
-           </property>
-          </widget>
-         </item>
-         <item row="8" column="1">
-          <layout class="QHBoxLayout" name="horizontalLayout_6">
-           <item>
-            <widget class="QDoubleSpinBox" name="doubleSpinBox">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="decimals">
-              <number>1</number>
-             </property>
-             <property name="value">
-              <double>1.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </widget>
+       <widget class="qMRMLSliceInformationWidget" name="MRMLSliceInformationWidget"/>
       </item>
      </layout>
     </widget>
@@ -411,6 +129,11 @@
    <header>qMRMLSliceControllerWidget.h</header>
   </customwidget>
   <customwidget>
+   <class>qMRMLSliceInformationWidget</class>
+   <extends>qMRMLWidget</extends>
+   <header>qMRMLSliceInformationWidget.h</header>
+  </customwidget>
+  <customwidget>
    <class>qMRMLWidget</class>
    <extends>QWidget</extends>
    <header>qMRMLWidget.h</header>
@@ -423,26 +146,8 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../../../Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc"/>
- </resources>
+ <resources/>
  <connections>
-  <connection>
-   <sender>PrescribedSliceSpacingRadioButton</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>doubleSpinBox</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>598</x>
-     <y>743</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>492</x>
-     <y>778</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>qSlicerSliceControllerModule</sender>
    <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
@@ -504,6 +209,38 @@
     <hint type="destinationlabel">
      <x>304</x>
      <y>285</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>qSlicerSliceControllerModule</sender>
+   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
+   <receiver>MRMLSliceInformationWidget</receiver>
+   <slot>setMRMLScene(vtkMRMLScene*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>308</x>
+     <y>401</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>308</x>
+     <y>621</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>MRMLSliceNodeComboBox</sender>
+   <signal>currentNodeChanged(vtkMRMLNode*)</signal>
+   <receiver>MRMLSliceInformationWidget</receiver>
+   <slot>setMRMLSliceNode(vtkMRMLNode*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>143</x>
+     <y>456</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>130</x>
+     <y>489</y>
     </hint>
    </hints>
   </connection>
