--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
@@ -197,7 +197,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QToolButton" name="LayerLinkToggle">
+         <widget class="QToolButton" name="SliceLinkToggle">
           <property name="text">
            <string/>
           </property>
@@ -221,7 +221,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QToolButton" name="LayerVisibilityToggle">
+         <widget class="QToolButton" name="SliceVisibilityToggle">
           <property name="text">
            <string>...</string>
           </property>
