--- a/Base/QTCoreModules/Resources/UI/qSlicerCamerasModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerCamerasModule.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>304</width>
-    <height>98</height>
+    <height>106</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,6 +46,9 @@
          <stringlist>
           <string>vtkMRMLViewNode</string>
          </stringlist>
+        </property>
+        <property name="showHidden">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
