ENH: Added qMRMLSlicesControllerWidget - Actions still need to be implemented
Following the existing pattern, in order to properly implement the
different action, this widget will need to have a reference to the
logics instantiated by the qMRMLSliceViewWidget.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14288 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
+++ b/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
@@ -26,5 +26,18 @@
     <file>Icons/SliceViewerFG.png</file>
     <file>Icons/SliceViewerLB.png</file>
     <file>Icons/SliceViewerOR.png</file>
+
+    <file>Icons/SlicesAnnotation.png</file>
+    <file>Icons/SlicesComposite.png</file>
+    <file>Icons/SlicesCrosshair.png</file>
+    <file>Icons/SlicesFadeToBG.png</file>
+    <file>Icons/SlicesFadeToFG.png</file>
+    <file>Icons/SlicesFeaturesVisible.png</file>
+    <file>Icons/SlicesFieldOfView.png</file>
+    <file>Icons/SlicesFitToWindow.png</file>
+    <file>Icons/SlicesLabelOpacity.png</file>
+    <file>Icons/SlicesSpatialUnit.png</file>
+    <file>Icons/SlicesToggleFgBg.png</file>
+
   </qresource>
 </RCC>
