--- a/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
+++ b/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>787</width>
-    <height>631</height>
+    <height>711</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -184,7 +184,11 @@
        <property name="contentsFrameShape">
         <enum>QFrame::StyledPanel</enum>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_3"/>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="qMRMLThreeDViewsControllerWidget" name="MRMLThreeDViewsControllerWidget"/>
+        </item>
+       </layout>
       </widget>
      </item>
     </layout>
@@ -617,6 +621,12 @@
    <class>qMRMLSlicesControllerWidget</class>
    <extends>qMRMLWidget</extends>
    <header>qMRMLSlicesControllerWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>qMRMLThreeDViewsControllerWidget</class>
+   <extends>qMRMLWidget</extends>
+   <header>qMRMLThreeDViewsControllerWidget.h</header>
   </customwidget>
   <customwidget>
    <class>qMRMLWidget</class>
