--- a/Base/QTCoreModules/Resources/UI/qSlicerTransformsModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerTransformsModule.ui
@@ -74,12 +74,6 @@
       <number>0</number>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
-      <property name="spacing">
-       <number>7</number>
-      </property>
-      <property name="margin">
-       <number>10</number>
-      </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
@@ -112,9 +106,6 @@
          <string>Transform Matrix</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
-         <property name="spacing">
-          <number>2</number>
-         </property>
          <property name="leftMargin">
           <number>2</number>
          </property>
@@ -350,7 +341,7 @@
   </customwidget>
   <customwidget>
    <class>qMRMLNodeComboBox</class>
-   <extends>QComboBox</extends>
+   <extends>QWidget</extends>
    <header>qMRMLNodeComboBox.h</header>
   </customwidget>
   <customwidget>
