BUG: Add NoneEnabled property to qMRMLSliceControllerWidget
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14342 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
@@ -151,6 +151,9 @@
           <string>vtkMRMLVolumeNode</string>
          </stringlist>
         </property>
+        <property name="noneEnabled">
+         <bool>true</bool>
+        </property>
         <property name="addEnabled">
          <bool>false</bool>
         </property>
