ENH: Redesign qSlicerModuleRepresentation, rework on showModuleAction()
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14375 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCoreModules/Resources/UI/qSlicerColorsModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerColorsModule.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Colors</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../qSlicerBaseQTCoreModules.qrc">
+    <normaloff>:/Icons/Colors.png</normaloff>:/Icons/Colors.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="ctkCollapsibleButton" name="DisplayCollapsibleButton">
@@ -284,7 +288,9 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../qSlicerBaseQTCoreModules.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>qSlicerColorsModule</sender>
